--- a/module.html
+++ b/module.html
@@ -329,7 +329,7 @@ namespace Module {
                     <div class="col-md-6">
                         <p>Il s'occupe de la gestion des modules liés au protocole HTTP.</p>
                         <p><code class="prettyprint">Handle()</code><br>Il s'agit du callback appelé à chaque fois
-                            que le module est invoqué.</p>
+                            que le module est invoqué par la processing list.</p>
                     </div>
                 </div>
             </section>
