--- a/discover.html
+++ b/discover.html
@@ -71,7 +71,7 @@
     <!-- /.container -->
 </nav>
 
-<section id="discover" class="padding-top-50">
+<section id="discover">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -88,21 +88,49 @@
 
         </div>
         <div class="wrapper">
-            <section class="row">
+            <section class="row" id="architecture">
                 <div class="col-md-12">
                     <h2>L'architecture</h2>
                     <div class="col-md-6 image-presentation">
-                        <a href="#" class="pop">
-                            <img src="img/APIClassDiagram.png" style="width: 100%;">
+                        <a href="#architecture" class="pop">
+                            <img src="img/APIClassDiagram.png" class="image-fullsize">
                         </a>
                     </div>
                     <div class="col-md-6 image-presentation">
-                        <a href="#" class="pop">
-                            <img src="img/HTTPClassDiagram.png" style="width: 100%;">
+                        <a href="#architecture" class="pop">
+                            <img src="img/HTTPClassDiagram.png" class="image-fullsize">
                         </a>
                     </div>
                 </div>
             </section>
+
+            <section class="row" id="flow">
+                <div class="col-md-12">
+                    <h2>Le flux d'exécution</h2>
+                    <div class="col-md-12 image-presentation">
+                        <a href="#flow" class="pop">
+                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdFlowchartDiagram.png" class="image-fullsize">
+                        </a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="row" id="interactions">
+                <div class="col-md-12">
+                    <h2>Les intéractions</h2>
+                    <div class="col-md-6 image-presentation">
+                        <a href="#interactions" class="pop">
+                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdHTTPResponseProcessing_sequenceDiagram.png" class="image-fullsize">
+                        </a>
+                    </div>
+                    <div class="col-md-6 image-presentation">
+                        <a href="#interactions" class="pop">
+                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdCoreWorking_sequenceDiagram.png" class="image-fullsize">
+                        </a>
+                    </div>
+                </div>
+            </section>
+
         </div>
     </div>
 </section>
@@ -157,7 +185,7 @@
                 <div class="modal-body">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
                             class="sr-only">Close</span></button>
-                    <img src="" class="imagepreview" style="width: 100%">
+                    <img src="" class="imagepreview image-fullsize">
                 </div>
             </div>
         </div>
