--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <a href="https://twitter.com/Salt_API" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
                         <li>
-                            <a href="https://github.com/Adpa18/SaltAPI" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="https://github.com/Adpa18/SaltAPI" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
                             <a href="https://www.yammer.com/epitech.eu/#/threads/inGroup?type=in_group&feedId=10244128" class="btn btn-default btn-lg"><i class="fa fa-windows fa-fw"></i> <span class="network-name">Yammer</span></a>
