--- a/discover.html
+++ b/discover.html
@@ -93,7 +93,7 @@
                         <li role="presentation" class="active"><a href="#architecture" data-scroll="architecture">Architecture</a>
                         </li>
                         <li role="presentation"><a href="#flow" data-scroll="flow">Flux d'exécution</a></li>
-                        <li role="presentation"><a href="#interactions" data-scroll="interactions">Intéractions</a></li>
+                        <li role="presentation"><a href="#interactions" data-scroll="interactions">Interactions</a></li>
                     </ul>
                 </div>
             </nav>
@@ -129,7 +129,7 @@
 
             <section class="row" id="interactions" data-anchor="interactions">
                 <div class="col-md-12">
-                    <h2>Les intéractions</h2>
+                    <h2>Les interactions</h2>
                     <div class="col-md-6 image-presentation">
                         <a href="#interactions" class="pop">
                             <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdHTTPResponseProcessing_sequenceDiagram.png" class="image-fullsize">
