Update image links

--- a/discover.html
+++ b/discover.html
@@ -105,12 +105,12 @@
                     <h2>L'architecture</h2>
                     <div class="col-md-6 image-presentation">
                         <a href="#architecture" class="pop">
-                            <img src="img/APIClassDiagram.png" class="image-fullsize">
+                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/APIClassDiagram.png" class="image-fullsize">
                         </a>
                     </div>
                     <div class="col-md-6 image-presentation">
                         <a href="#architecture" class="pop">
-                            <img src="img/HTTPClassDiagram.png" class="image-fullsize">
+                            <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/HTTPClassDiagram.png" class="image-fullsize">
                         </a>
                     </div>
                 </div>
