Add warning about reading the README file + link

--- a/discover.html
+++ b/discover.html
@@ -84,7 +84,13 @@
             <div class="col-md-12">
                 Nous avons pris soin de documenter au mieux notre code, afin de rendre la SaltAPI accessible à tous.
                 Vous trouverez ici toutes les informations nécessaires pour comprendre le fonctionnement de notre HTTPd,
-                ainsi que son système de modules. Voici la liste des sections, toutes illustrées :
+                ainsi que son système de modules.
+
+		<br />
+		<h3>Pensez bien à lire le README afin de bien comprendre les subtilitées de SaltAPI : <a target="_blank" href="https://github.com/Adpa18/SaltAPI/blob/master/README.md">ICI</a>.</h3>
+		<br />
+
+		Voici la liste des sections, toutes illustrées :
             </div>
 
             <nav class="subnav">
