Add short description on discover SaltAPI section

--- a/discover.html
+++ b/discover.html
@@ -109,6 +109,7 @@
             <section class="row" id="architecture" data-anchor="architecture">
                 <div class="col-md-12">
                     <h2>L'architecture</h2>
+		    <p>Voici deux diagrammes de classes qui modélisent l'architecture de SaltAPI.</p>
                     <div class="col-md-6 image-presentation">
                         <a href="#architecture" class="pop">
                             <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/APIClassDiagram.png" class="image-fullsize">
@@ -125,6 +126,7 @@
             <section class="row" id="flow" data-anchor="flow">
                 <div class="col-md-12">
                     <h2>Le flux d'exécution</h2>
+		    <p>Une vue globale du fonctionnement de SaltAPI représentée par le flux d'exécution est disponible pour nos lecteurs.</p>
                     <div class="col-md-12 image-presentation">
                         <a href="#flow" class="pop">
                             <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdFlowchartDiagram.png" class="image-fullsize">
@@ -136,6 +138,7 @@
             <section class="row" id="interactions" data-anchor="interactions">
                 <div class="col-md-12">
                     <h2>Les interactions</h2>
+		    <p>C'est ici que vous découvrez les interactions entre les différents modules de SaltAPI.</p>
                     <div class="col-md-6 image-presentation">
                         <a href="#interactions" class="pop">
                             <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdHTTPResponseProcessing_sequenceDiagram.png" class="image-fullsize">
