--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>SaltAPI</h1>
-                        <h3>Une API pour le HTTPd / ZIA, proposée par Salty Studio.</h3>
+                        <h3>Une API pour le HTTPd / ZIA, proposée par <a href="salty-studio.html" style="color: white">Salty Studio.</a></h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -210,7 +210,7 @@
                             <a href="https://github.com/Adpa18/SaltAPI" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://www.yammer.com/epitech.eu/#/threads/inGroup?type=in_group&feedId=10244128" class="btn btn-default btn-lg"><i class="fa fa-windows fa-fw"></i> <span class="network-name">Yammer</span></a>
+                            <a href="https://www.yammer.com/epitech.eu/#/threads/inGroup?type=in_group&feedId=10244128" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-windows fa-fw"></i> <span class="network-name">Yammer</span></a>
                         </li>
                     </ul>
                 </div>
