First fix responsiveness salty page

--- a/salty-studio.html
+++ b/salty-studio.html
@@ -115,69 +115,70 @@
                 <h2>L'équipe</h2>
             </div>
 
-            <div class="col-md-12 item-list-left">
-                <div class="col-md-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
+                <div class="col-md-3 col-sm-3 col-xs-3">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 col-sm-9 col-xs-3">
                     <h3>Nicolas Constanty</h3>
                     <h4>Game Developer</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
             </div>
 
-            <div class="col-md-12 item-list-right">
-                <div class="col-md-9">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right">
+                <div class="col-md-5 col-sm-5 col-xs-5 col-md-push-4 col-sm-push-4 col-xs-push-4">
                     <h3>Quentin Gasparotto</h3>
                     <h4>Master Chorizo</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
-                <div class="col-md-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-right">
+                <div class="col-md-3 col-sm-3 col-xs-3 col-md-push-4 col-sm-push-4 col-xs-push-4">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/quentin.gasparotto.jpg" class="image-whoami-right image-fullsize center-div">
                 </div>
             </div>
 
-            <div class="col-md-12 item-list-left">
-                <div class="col-md-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
+                <div class="col-md-3 col-sm-3 col-xs-3">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 col-sm-9 col-xs-9">
                     <h3>Victor Gouet</h3>
                     <h4>Super Salty</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
             </div>
 
-            <div class="col-md-12 item-list-right">
-                <div class="col-md-9">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right">
+                <div class="col-md-5 col-sm-5 col-xs-5 col-md-push-4 col-sm-push-4 col-xs-push-4">
                     <h3>Fernand Veyrier</h3>
-                    <h4>Stagiaire Fullstack</h4>
-                    <p>Lorem Ipsum !</p>
+                    <h4>Game Developer, Stagiaire Fullstack</h4>
+                    <p>Passioné de jeu-vidéo, toujours partant pour de nouveaux projets, mes outils de prédilection
+                    sont Unity3D et Unreal Engine.</p>
                 </div>
-                <div class="col-md-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-right">
+                <div class="col-md-3 col-sm-3 col-xs-3 col-md-push-4 col-sm-push-4 col-xs-push-4">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/fernand.veyrier.jpg" class="image-whoami-right image-fullsize center-div">
                 </div>
             </div>
 
-            <div class="col-md-12 item-list-left">
-                <div class="col-md-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
+                <div class="col-md-3 col-sm-3 col-xs-3">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/bastien.dhiver.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-5 col-sm-5 col-xs-5">
                     <h3>Bastien Dhiver</h3>
                     <h4>Monsieur Libre et Open Source</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
             </div>
 
-            <div class="col-md-12 item-list-right">
-                <div class="col-md-9">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right">
+                <div class="col-md-5 col-sm-5 col-xs-5 col-md-push-4 col-sm-push-4 col-xs-push-4">
                     <h3>Adrien Wery</h3>
                     <h4>Amoureux de la gastronomie</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
-                <div class="col-md-3">
-                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-right">
+                <div class="col-md-3 col-sm-3 col-xs-3 col-md-push-4 col-sm-push-4 col-xs-push-4">
+                    <img src="https://cdn.local.epitech.eu/userprofil/profilview/adrien.wery.jpg" class="image-whoami-right image-fullsize center-div">
                 </div>
             </div>
 
