Second fix responsiveness salty page

--- a/salty-studio.html
+++ b/salty-studio.html
@@ -96,7 +96,7 @@
                     <p>Un projet où nous avons pu présenter un Bomberman, jusqu'à 4 joueurs humains, ou IA.</p>
                 </div>
                 <div class="col-md-6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z-9oioAKI38" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Z-9oioAKI38" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-md-12">
@@ -105,7 +105,7 @@
                     <p>Clone du célèbre R-Type, il est possible d'y jouer jusqu'à 4, le tout en réseau.</p>
                 </div>
                 <div class="col-md-6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ivD8VdDHZgs" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/ivD8VdDHZgs" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -116,10 +116,10 @@
             </div>
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
-                <div class="col-md-3 col-sm-3 col-xs-3">
+                <div class="col-md-3 col-sm-3">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
-                <div class="col-md-9 col-sm-9 col-xs-3">
+                <div class="col-md-9 col-sm-9">
                     <h3>Nicolas Constanty</h3>
                     <h4>Game Developer</h4>
                     <p>Lorem Ipsum !</p>
@@ -127,21 +127,21 @@
             </div>
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-right">
-                <div class="col-md-5 col-sm-5 col-xs-5 col-md-push-4 col-sm-push-4 col-xs-push-4">
+                <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3>Quentin Gasparotto</h3>
                     <h4>Master Chorizo</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
-                <div class="col-md-3 col-sm-3 col-xs-3 col-md-push-4 col-sm-push-4 col-xs-push-4">
+                <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/quentin.gasparotto.jpg" class="image-whoami-right image-fullsize center-div">
                 </div>
             </div>
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
-                <div class="col-md-3 col-sm-3 col-xs-3">
+                <div class="col-md-3 col-sm-3">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
-                <div class="col-md-9 col-sm-9 col-xs-9">
+                <div class="col-md-9 col-sm-9">
                     <h3>Victor Gouet</h3>
                     <h4>Super Salty</h4>
                     <p>Lorem Ipsum !</p>
@@ -149,35 +149,35 @@
             </div>
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-right">
-                <div class="col-md-5 col-sm-5 col-xs-5 col-md-push-4 col-sm-push-4 col-xs-push-4">
+                <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3>Fernand Veyrier</h3>
                     <h4>Game Developer, Stagiaire Fullstack</h4>
                     <p>Passioné de jeu-vidéo, toujours partant pour de nouveaux projets, mes outils de prédilection
                     sont Unity3D et Unreal Engine.</p>
                 </div>
-                <div class="col-md-3 col-sm-3 col-xs-3 col-md-push-4 col-sm-push-4 col-xs-push-4">
+                <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/fernand.veyrier.jpg" class="image-whoami-right image-fullsize center-div">
                 </div>
             </div>
 
             <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
-                <div class="col-md-3 col-sm-3 col-xs-3">
+                <div class="col-md-3 col-sm-3">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/bastien.dhiver.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
-                <div class="col-md-5 col-sm-5 col-xs-5">
+                <div class="col-md-5 col-sm-5">
                     <h3>Bastien Dhiver</h3>
                     <h4>Monsieur Libre et Open Source</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
             </div>
 
-            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right">
-                <div class="col-md-5 col-sm-5 col-xs-5 col-md-push-4 col-sm-push-4 col-xs-push-4">
+            <div class="col-md-12 col-sm-12 item-list-right">
+                <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3>Adrien Wery</h3>
                     <h4>Amoureux de la gastronomie</h4>
                     <p>Lorem Ipsum !</p>
                 </div>
-                <div class="col-md-3 col-sm-3 col-xs-3 col-md-push-4 col-sm-push-4 col-xs-push-4">
+                <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/adrien.wery.jpg" class="image-whoami-right image-fullsize center-div">
                 </div>
             </div>
