--- a/salty-studio.html
+++ b/salty-studio.html
@@ -130,7 +130,9 @@
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3>Quentin Gasparotto</h3>
                     <h4>Master Chorizo</h4>
-                    <p>Lorem Ipsum !</p>
+                    <p>Fervent défenseur du label "fait maison", la légende raconte qu'il à un jour mangé un autre plat
+                        que "pâtes au chorizo". Il prépare dans l'ombre un plan machiavélique afin de plonger l'humanité
+                        dans un bain de sang et d'épices le tout surmonté d'une pincée de romarin.</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/quentin.gasparotto.jpg" class="image-whoami-right image-fullsize center-div">
@@ -141,10 +143,10 @@
                 <div class="col-md-3 col-sm-3">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
-                <div class="col-md-9 col-sm-9">
+                <div class="col-md-5 col-sm-5">
                     <h3>Victor Gouet</h3>
                     <h4>Super Salty</h4>
-                    <p>Lorem Ipsum !</p>
+                    <p>Successeur de l'empire de Jose Bove. Défenseur du Trial Poursuite. Aspirant à devenir le meilleur dresseur.</p>
                 </div>
             </div>
 
@@ -152,8 +154,8 @@
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3>Fernand Veyrier</h3>
                     <h4>Game Developer, Stagiaire Fullstack</h4>
-                    <p>Passioné de jeu-vidéo, toujours partant pour de nouveaux projets, mes outils de prédilection
-                    sont Unity3D et Unreal Engine.</p>
+                    <p>Passioné de jeu-vidéo, pro Unity. Il ne manquera pas de vous rappeler que le mot "Engine" se prononce
+                        ˈendʒɪn, ou encore N-Gine. Il est tellement diabolique que la légende raconte que Satan l'habite.</p>
                 </div>
                 <div class="col-md-3 col-sm-3 col-md-push-4 col-sm-push-4">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/fernand.veyrier.jpg" class="image-whoami-right image-fullsize center-div">
@@ -167,7 +169,7 @@
                 <div class="col-md-5 col-sm-5">
                     <h3>Bastien Dhiver</h3>
                     <h4>Monsieur Libre et Open Source</h4>
-                    <p>Lorem Ipsum !</p>
+                    <p>Homme de la situation en matière de sécurité, fier défenseur des projets libres/open source et promoteur du chiffrement, il ne dit pas crypter mais chiffrer.</p>
                 </div>
             </div>
 
