--- a/salty-studio.html
+++ b/salty-studio.html
@@ -115,7 +115,7 @@
                 <h2>L'équipe</h2>
             </div>
 
-            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
                 <div class="col-md-3 col-sm-3">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/nicolas.constanty.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
@@ -126,7 +126,7 @@
                 </div>
             </div>
 
-            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3>Quentin Gasparotto</h3>
                     <h4>Master Chorizo</h4>
@@ -139,7 +139,7 @@
                 </div>
             </div>
 
-            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
                 <div class="col-md-3 col-sm-3">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/victor.gouet.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
@@ -150,7 +150,7 @@
                 </div>
             </div>
 
-            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3>Fernand Veyrier</h3>
                     <h4>Game Developer, Stagiaire Fullstack</h4>
@@ -162,7 +162,7 @@
                 </div>
             </div>
 
-            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left">
+            <div class="col-md-12 col-sm-12 col-xs-12 item-list-left fade-in">
                 <div class="col-md-3 col-sm-3">
                     <img src="https://cdn.local.epitech.eu/userprofil/profilview/bastien.dhiver.jpg" class="image-whoami-left image-fullsize center-div">
                 </div>
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-            <div class="col-md-12 col-sm-12 item-list-right">
+            <div class="col-md-12 col-sm-12 item-list-right fade-in">
                 <div class="col-md-5 col-sm-5 col-md-push-4 col-sm-push-4">
                     <h3>Adrien Wery</h3>
                     <h4>Amoureux de la gastronomie</h4>
