--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Suivez la SaltAPI:</h2>
+                    <h2 class="text-center">Suivez la SaltAPI:</h2>
                 </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
+                <div class="col-lg-6 col-xs-12">
+                    <ul class="list-inline banner-social-buttons text-center" style="float: none">
                         <li>
                             <a href="https://twitter.com/Salt_API" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
