corrected some typos

--- a/discover.html
+++ b/discover.html
@@ -87,7 +87,7 @@
                 ainsi que son système de modules.
 
 		<br />
-		<h3>Pensez bien à lire le README afin de bien comprendre les subtilitées de SaltAPI : <a target="_blank" href="https://github.com/Adpa18/SaltAPI/blob/master/README.md">ICI</a>.</h3>
+		<h3>Pensez bien à lire le README afin de bien comprendre les subtilités de SaltAPI : <a target="_blank" href="https://github.com/Adpa18/SaltAPI/blob/master/README.md">ICI</a>.</h3>
 		<br />
 
 		Voici la liste des sections, toutes illustrées :
