added details for presentation page

--- a/discover.html
+++ b/discover.html
@@ -109,7 +109,7 @@
             <section class="row" id="architecture" data-anchor="architecture">
                 <div class="col-md-12">
                     <h2>L'architecture</h2>
-		    <p>Voici deux diagrammes de classes qui modélisent l'architecture de SaltAPI.</p>
+		            <p>Voici deux diagrammes de classes qui modélisent l'architecture de SaltAPI.</p>
                     <div class="col-md-6 image-presentation">
                         <a href="#architecture" class="pop">
                             <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/APIClassDiagram.png" class="image-fullsize">
@@ -126,12 +126,50 @@
             <section class="row" id="flow" data-anchor="flow">
                 <div class="col-md-12">
                     <h2>Le flux d'exécution</h2>
-		    <p>Une vue globale du fonctionnement de SaltAPI représentée par le flux d'exécution est disponible pour nos lecteurs.</p>
+		            <p>Une vue globale du fonctionnement de SaltAPI représentée par le flux d'exécution est disponible pour nos lecteurs.</p>
                     <div class="col-md-12 image-presentation">
                         <a href="#flow" class="pop">
                             <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdFlowchartDiagram.png" class="image-fullsize">
                         </a>
                     </div>
+                </div>
+
+                <div class="col-md-12" id="details">
+                    <h3>Plus de détails :</h3>
+
+                    <div class="col-md-12" id="fragment1">
+                        <div class="col-md-6">
+                            <p>Super description</p>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#fragment1" class="pop">
+                                <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdFlowchartDiagram_CoreActions.png" class="image-fullsize">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12" id="fragment2">
+                        <div class="col-md-6">
+                            <a href="#fragment2" class="pop">
+                                <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdFlowchartDiagram_Network.png" class="image-fullsize">
+                            </a>
+                        </div>
+                        <div class="col-md-6">
+                            <p>Super description</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12" id="fragment3">
+                        <div class="col-md-6">
+                            <p>Super description</p>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#fragment3" class="pop">
+                                <img src="https://raw.githubusercontent.com/Adpa18/SaltAPI/master/Conception/httpdFlowchartDiagram_ProcessingList.png" class="image-fullsize">
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
